[package]
name = "cargo-wop"
version = "0.1.2"
authors = ["Christopher Prohm"]
edition = "2018"

repository = "https://github.com/chmp/cargo-wop"
description = "Cargo for single-file projects"
readme = "Readme.md"
license = "MIT"

[[bin]]
name = "cargo-wop"
path = "cargo-wop.rs"

[dependencies]
anyhow = "1.0"
serde_json = "1.0"
sha1 = "0.6.0"
toml = "0.5"